--- a/faq/build.xml
+++ b/faq/build.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- EN-Revision: e18f4b5dee1d38f45af5d5d70488de734bbc21e3 Maintainer: hcrow Status: ready -->
+<!-- EN-Revision: f56777d8b1b3c5aa3ccff0a5b707df4a7f820d2a Maintainer: hcrow Status: ready -->
 <chapter xml:id="faq.build" xmlns="http://docbook.org/ns/docbook" xmlns:xlink="http://www.w3.org/1999/xlink">
   <title>Problemas de Compilación</title>
   <titleabbrev>Problemas de Compilación</titleabbrev>
@@ -23,7 +23,7 @@
       generar el script de configuración desde <filename>configure.in</filename>. Solo
       se ejecuta <command>./buildconf</command> en el directorio de nivel superior
       después de obtener los fuentes desde el servidor SVN. (También, a menos que
-      se ejecute la configuración con la opción <literal>--enable-maintainer-mode</literal>,
+      se ejecute <command>configure</command> con la opción <literal>--enable-maintainer-mode</literal>,
       el script de configuración no se recompilará automaticamente cuando el
       archivo <filename>configure.in</filename> es actualizado, así que debe de asegurarse
       que se hace manualmente cuando se note que <filename>configure.in</filename> haya cambiado.
